# llmops-project

./: .gitignore  DEVELOPER_GUIDE.md  INTEGRATION_PLAN.md  INTEGRATION_SUMMARY.md  test_frontend_usage.py
.github/workflows/: backend-deploy.yml  ci-cd.yml  claude.yaml  code-quality.yml  deploy-docs.yml  docker-build.yml  metadata-extract.yml  pull-and-promote.yml  required-checks.yml  resolve-image-digest.yml  terraform-plan-apply.yml
.github/workflows/advanced_deployment/: config-summary.yml
archive/agent-foundation-main (1)/agent-foundation-main/: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  init_template.py  mkdocs.yml  pyproject.toml
archive/agent-foundation-main (1)/agent-foundation-main/.github/: CODEOWNERS
archive/agent-foundation-main (1)/agent-foundation-main/.github/workflows/: ci-cd.yml  code-quality.yml  docker-build.yml  resolve-image-digest.yml  terraform-plan-apply.yml
archive/agent-foundation-main (1)/agent-foundation-main/docs/: README.md  development.md  environment-variables.md  getting-started.md  infrastructure.md  observability.md  template-management.md  troubleshooting.md
archive/agent-foundation-main (1)/agent-foundation-main/docs/references/: README.md  bootstrap.md  cicd.md  code-quality.md  deployment.md  docker-compose-workflow.md  dockerfile-strategy.md  mkdocs-setup.md  protection-strategies.md  testing.md
archive/agent-foundation-main (1)/agent-foundation-main/docs/stylesheets/: extra.css
archive/agent-foundation-main (1)/agent-foundation-main/notebooks/: create_agent_engine.ipynb
archive/agent-foundation-main (1)/agent-foundation-main/src/agent_foundation/: __init__.py  agent.py  prompt.py  server.py  tools.py
archive/agent-foundation-main (1)/agent-foundation-main/src/agent_foundation/utils/: __init__.py  config.py  observability.py
archive/agent-foundation-main (1)/agent-foundation-main/terraform/bootstrap/dev/: main.tf  variables.tf
archive/agent-foundation-main (1)/agent-foundation-main/terraform/bootstrap/module/gcp/: outputs.tf  terraform.tf
archive/agent-foundation-main (1)/agent-foundation-main/terraform/bootstrap/pre/: main.tf  terraform.tfvars.example
archive/agent-foundation-main (1)/agent-foundation-main/terraform/bootstrap/prod/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example
archive/agent-foundation-main (1)/agent-foundation-main/terraform/bootstrap/stage/: main.tf  outputs.tf
archive/agent-foundation-main (1)/agent-foundation-main/terraform/main/: main.tf  services.tf  terraform.tf  terraform.tfvars.example  variables.tf
archive/agent-foundation-main (1)/agent-foundation-main/tests/: conftest.py  test_callbacks.py  test_config.py  test_integration.py  test_logging_callbacks.py  test_tools.py
archive/config/: .ruff.toml
archive/infra/: bigquery.tf  main.tf  monitoring.tf  pubsub.tf  scheduler.tf  storage.tf
archive/scripts/: deploy_backend.sh  deploy_pipelines.sh  deploy_trigger_service.sh
archive/workflows/: backend-deploy.yml  frontend-deploy.yml  trigger-deploy.yml
final-frontend-llmops/: next.config.ts  package-lock.json
final-frontend-llmops/src/components/: ChatBubble.tsx
final-frontend-llmops/src/hooks/: useChat.ts
final-frontend-llmops/src/lib/: api.ts
final-frontend-llmops/src/types/: api.ts  chat.ts
infra/: main.tf
infra/advanced_deployment/main/: backend.tf  iam.tf  main.tf  outputs.tf  providers.tf
xyz/: .coverage  .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
xyz/app/: main.py  routes.py
xyz/docs/: BACKEND_DOCUMENTATION.md  CLOUD_SETUP.md
xyz/pipelines/: evaluation_pipeline.py  experiment_pipeline.py  master_pipeline.py  rag_ingestion_pipeline.py
xyz/scripts/: generate_docs.py  seed_firestore_config.py  setup_bigquery.py
xyz/tests/: conftest.py
xyz/utils/: config.py
(+34 files in other folders)
